@@ -246,6 +246,14 @@ public class StringDict {
     return values[index];
   }
 
+
+  public String get(String key, String alternate) {
+    int index = index(key);
+    if (index == -1) return alternate;
+    return values[index];
+  }
+
+
   /**
    * @webref stringdict:method
    * @brief Create a new key/value pair or change the value of one
@@ -279,7 +287,7 @@ public class StringDict {
       keys = PApplet.expand(keys);
       values = PApplet.expand(values);
     }
-    indices.put(key, new Integer(count));
+    indices.put(key, Integer.valueOf(count));
     keys[count] = key;
     values[count] = value;
     count++;
@@ -325,8 +333,8 @@ public class StringDict {
     keys[b] = tkey;
     values[b] = tvalue;
 
-    indices.put(keys[a], new Integer(a));
-    indices.put(keys[b], new Integer(b));
+    indices.put(keys[a], Integer.valueOf(a));
+    indices.put(keys[b], Integer.valueOf(b));
   }
 
 
